<resources>
    <string name="app_name">Android Tut</string>
    <string name="btnLogin">Login</string>
    <string name="btnSignup">Sign Up</string>
    <string name="altTxt">Content Description</string>
    <string name="tvDummyTxt">"All the courses are job-oriented, up-to-date with the latest algorithms and modules, fully practical, and provide you hands-on projects. "</string>
    <string name="entTxt">Enter your text</string>
    <string name="btnSend">Send</string>
    <string name="enterWt">Enter your weight</string>
    <string name="enterHt">Enter your height(in ft.)</string>
    <string name="enterHtIn">Enter your height (in inch)</string>
    <string name="Calculate">Calculate BMI</string>
    <string name="result">Result :</string>
    <string name="reset">Reset</string>
    <string name="btnToTtt">Tik Tac Toe</string>
    <string name="btnToBmi">BMI</string>
    <string name="btnToViews">Views</string>
    <string name="navToIntents">Select One</string>
    <string name="btnBundlePassing">Pass Bundle</string>
    <string name="bundleTitle">Title</string>
    <string name="bundleName">Name</string>
    <string name="bundleRoll">Roll</string>
    <string name="splashScreen">Developed By Bibek</string>
    <string name="btnStartAnimation">Animation</string>
    <string name="btnStartAnimationLottie">Lottie Anim</string>
    <string name="btnStartListView">See List</string>
    <string name="btnStartCardView">Card View</string>
    <string name="btnRecyclerView">Recycle View</string>
    <string name="submit">Add</string>
    <string name="title_activity_basic">BasicActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="btnToolbar">Toolbar</string>
    <string name="btnToast">Toats</string>
    <string name="btnCusDialog">Dialog</string>
    <string name="btnToNotification">Notification</string>
    <string name="btnToCusNotification">Cus Notification</string>
    <string name="btnToImplicitIntent">Implicit intent</string>
    <string name="btnButton">Button</string>
    <string name="btnButtonDial">Dial</string>
    <string name="btnButtonMsg">Message</string>
    <string name="btnButtonEmail">Email</string>
    <string name="btnButtonShare">Share</string>
    <string name="btnToFragmentEx">Fragment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btnToTabLayout">Tab Layout</string>
    <string name="btnToBottomNavigation">Bottom Nav</string>
    <string name="menuItemHome">Home</string>
    <string name="menuItemAccount">Account</string>
    <string name="menuItemMenu">Menu</string>
    <string name="menuItemSearch">Search</string>
    <string name="btnToNavigationDrawer">Navigation Drawer</string>
    <string name="nvItemChats">Chats</string>
    <string name="ndItemChats">Chats</string>
    <string name="ndItemMarketplace">Marketplace</string>
    <string name="nvItemMessageRequests">Message requests</string>
    <string name="nvItemArchives">Archives</string>
    <string name="nvItemSettings">Settings</string>
    <string name="nvItemExit">Exit</string>
    <string name="tvUserName">Bibek Shrestha</string>
    <string name="openDrawer">Open Drawer</string>
    <string name="closeDrawer">Close Drawer</string>
    <string name="btnToGoogleMap">G-Map</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="btnToJsonParse">Parse Json</string>
    <string name="btnToWebView">Web View</string>
    <string name="btnToDatabaseActivity">Database</string>
    <string name="btnToRoomDatabase">Room Db</string>
    <string name="dailyExpenses">Expense Tracker</string>
    <string name="ExpenseTitle">Expense title</string>
    <string name="ExpenseAmount">Expense amount</string>
    <string name="Save">Save</string>
    <string name="btnToImage">Image</string>
    <string name="btnToMusicPlayer">Music Player</string>
    <string name="audioPlay">Play</string>
    <string name="audioPause">Pause</string>
    <string name="audioStop">Stop</string>
    <string name="btnToVideoPlayer">Video Player</string>
    <string name="btnToSensor">Sensor</string>
    <string name="btnToService">Service</string>
    <string name="btnToAlarmManager">Alarm</string>
    <string name="btnToFirebasePush">Firebase P</string>
    <string name="btnToFirebaseDb">Firebase Db</string>
</resources>