<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".intent_passing"
    android:gravity="center"
    android:orientation="vertical"
    >
    <TextView
        android:id="@+id/tvNavToIntents"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/navToIntents"
        android:textColor="@color/red"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginBottom="20dp"
        />
    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:rowCount="3"
        >
        <Button
            android:id="@+id/btnToTtt"
            android:text="@string/btnToTtt"
            android:layout_marginEnd="15dp"
            />
        <Button
            android:id="@+id/btnToBmi"
            android:text="@string/btnToBmi"
            />
        <Button
            android:id="@+id/btnToViews"
            android:text="@string/btnToViews"
            />
        <Button
            android:id="@+id/btnBundlePassing"
            android:text="@string/btnBundlePassing"
            />

        <Button
            android:id="@+id/btnAnimation"
            android:text="@string/btnStartAnimation"
            />

        <Button
            android:id="@+id/btnAnimationLottie"
            android:text="@string/btnStartAnimationLottie"
            />

    </GridLayout>
</LinearLayout>