<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ImplicitIntentPassing"
    android:orientation="vertical"
    android:gravity="center"
    >

    <Button
        android:id="@+id/btnButtonDial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnButtonDial"
        />
    <Button
        android:id="@+id/btnButtonMsg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnButtonMsg"
        />
    <Button
        android:id="@+id/btnButtonEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnButtonEmail"
        />
    <Button
        android:id="@+id/btnButtonShare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnButtonShare"
        />

</LinearLayout>