<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BMICalculator"
    android:gravity="center_horizontal"
    android:paddingVertical="100dp"
    android:orientation="vertical"
    >
    <EditText
        android:id="@+id/etWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="@dimen/char14"
        android:hint="@string/enterWt"
        android:autofillHints="Weight"
        android:inputType="number"
        />
    <EditText
        android:id="@+id/etHeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="@dimen/char14"
        android:hint="@string/enterHt"
        android:autofillHints="Height"
        android:inputType="number"
        android:layout_marginTop="@dimen/medium_margin"
        />
    <EditText
        android:id="@+id/etHeightIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="@dimen/char14"
        android:hint="@string/enterHtIn"
        android:inputType="number"
        android:layout_marginTop="@dimen/medium_margin"
        android:autofillHints="Height"
        />
    <Button
        android:id="@+id/btnCalculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Calculate"
        android:backgroundTint="@color/black"
        android:layout_marginTop="@dimen/medium_margin"
        android:padding="@dimen/padding_sm"
        />

</LinearLayout>