<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BundlePassing"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingVertical="30dp"
    >
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="20dp"
        >
        <EditText
            android:id="@+id/etBundleTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="14"
            android:hint="@string/bundleTitle"
            android:text=""
            />
        <EditText
            android:id="@+id/etBundleName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="14"
            android:hint="@string/bundleName"
            android:text=""
            />
        <EditText
            android:id="@+id/etBundleRoll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="5"
            android:hint="@string/bundleRoll"
            android:text=""
            />
    </LinearLayout>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnSend"
            />
    <TextView
        android:id="@+id/tvBundleData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="18sp"
        />
</LinearLayout>